@@ -29,22 +29,13 @@ import static java.util.stream.Collectors.toList;
 public abstract class TunableParameters extends AbstractParameters implements ITunableParameters {
 
     private static boolean debug = false;
+    private JSONObject rawJSON;
+    protected boolean resetOn = true; // if set to false while setting many parameter values, the _reset() method will not be called (for efficiency)
     List<String> parameterNames = new ArrayList<>();
     Map<String, List<Object>> possibleValues = new HashMap<>();
     Map<String, Object> defaultValues = new HashMap<>();
     Map<String, Object> currentValues = new HashMap<>();
     Map<String, Class<?>> parameterTypes = new HashMap<>();
-
-    /**
-     * Zero-argument constructor used for auto-tuning
-     */
-    public TunableParameters() {
-        this(System.currentTimeMillis());
-    }
-
-    public TunableParameters(long seed) {
-        super(seed);
-    }
 
     /**
      * Instantiate parameters from a JSON file
@@ -81,9 +72,10 @@ public abstract class TunableParameters extends AbstractParameters implements IT
             }
         }
         params._reset();
-
+        params.rawJSON = rawData;
         // We should also check that there are no other properties in there
         allParams.add("class");
+        allParams.add("args"); // this may be present if there are non-configurable parameters needed for the constructor
         for (Object key : rawData.keySet()) {
             if (key instanceof String && !allParams.contains(key)) {
                 System.out.println("Unexpected key in JSON for TunableParameters : " + key);
@@ -104,30 +96,26 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         if (finalData == null)
             return null;
         Object data = (finalData instanceof Long) ? Integer.valueOf(((Long) finalData).intValue()) : finalData;
-        if (finalData instanceof JSONObject) {
-            JSONObject subJson = (JSONObject) finalData;
+        if (finalData instanceof JSONObject subJson) {
             T retValue = JSONUtils.loadClassFromJSON(subJson);
-            if (retValue instanceof TunableParameters) {
-                TunableParameters subParams = (TunableParameters) retValue;
-                TunableParameters.loadFromJSON(subParams, subJson);
+            if (retValue instanceof TunableParameters subParams) {
+         //       TunableParameters.loadFromJSON(subParams, subJson);
                 params.setParameterValue(name, subParams);
-            //    params.registerChild(name, subJson);
+                //    params.registerChild(name, subJson);
             }
             return retValue;
         }
-        if (defaultValue == null) {
-            throw new AssertionError("No default value provided for " + name + " to check JSON validity");
-        }
-        if (data.getClass() == defaultValue.getClass())
+        Class<?> requiredClass = params.getParameterTypes().get(name);
+        if (data.getClass() == requiredClass)
             return (T) data;
-        if (data.getClass() == Integer.class && defaultValue.getClass() == Double.class)
+        if (data.getClass() == Integer.class && requiredClass == Double.class)
             return (T) Double.valueOf((Integer) data);
-        if (data.getClass() == String.class && defaultValue.getClass().isEnum()) {
-            Optional<?> matchingValue = Arrays.stream(defaultValue.getClass().getEnumConstants()).filter(e -> e.toString().equals(data)).findFirst();
+        if (data.getClass() == String.class && requiredClass.isEnum()) {
+            Optional<?> matchingValue = Arrays.stream(requiredClass.getEnumConstants()).filter(e -> e.toString().equals(data)).findFirst();
             if (matchingValue.isPresent()) {
                 return (T) matchingValue.get();
             }
-            throw new AssertionError("No Enum match found for " + name + " [" + data + "] in " + Arrays.toString(defaultValue.getClass().getEnumConstants()));
+            throw new AssertionError("No Enum match found for " + name + " [" + data + "] in " + Arrays.toString(requiredClass.getEnumConstants()));
         }
         System.out.println("Warning: parsing param " + name + "; couldn't find correct type, assigning default value: " + defaultValue);
         return defaultValue;
@@ -141,6 +129,7 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         return (json.get(name) instanceof Map);
     }
 
+    @SuppressWarnings("unchecked")
     private static <T> List<T> getParamList(String name, JSONObject json, T defaultValue) {
         Object data = json.getOrDefault(name, defaultValue);
         if (!(data instanceof List))
@@ -165,17 +154,33 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         tunable.possibleValues = new HashMap<>(possibleValues);
         tunable.defaultValues = new HashMap<>(defaultValues);
         tunable.parameterTypes = new HashMap<>(parameterTypes);
+        tunable.resetOn = false;
         for (String name : parameterNames) {
             Object value = getParameterValue(name);
-            if (value instanceof TunableParameters) {
+            if (value instanceof TunableParameters subParams) {
                 // then we have to recurse
-                TunableParameters subParams = (TunableParameters) value;
                 TunableParameters subParamsCopy = subParams.copy();
                 tunable.setParameterValue(name, subParamsCopy);
             } else {
                 tunable.setParameterValue(name, value);
             }
         }
+        tunable.resetOn = true;
+        tunable._reset();
+        return tunable;
+    }
+
+    // This is much faster in a forward model, and just changes the random seed
+    // It is suitable if the same set of parameters are being used with none of them recording any state
+    // This is usually the case for forward models in MCTS for example
+    public TunableParameters shallowCopy() {
+        AbstractParameters retValue = super.copy();  // this calls ._copy()
+        TunableParameters tunable = (TunableParameters) retValue;
+        tunable.parameterNames = parameterNames;
+        tunable.possibleValues = possibleValues;
+        tunable.defaultValues = defaultValues;
+        tunable.parameterTypes = parameterTypes;
+        tunable.currentValues = currentValues;
         tunable._reset();
         return tunable;
     }
@@ -213,6 +218,15 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         possibleValues.put(name, new ArrayList<>(allSettings));
         currentValues.put(name, defaultValue);
     }
+
+    public <T> void addTunableParameter(String name, Class<? extends T> parameterClass, T defaultValue, List<T> allSettings) {
+        if (!parameterNames.contains(name)) parameterNames.add(name);
+        defaultValues.put(name, defaultValue);
+        parameterTypes.put(name, parameterClass);
+        possibleValues.put(name, new ArrayList<>(allSettings));
+        currentValues.put(name, defaultValue);
+    }
+
 
     public <T> void addTunableParameter(String name, Class<T> classType) {
         if (!parameterNames.contains(name)) parameterNames.add(name);
@@ -266,7 +280,7 @@ public abstract class TunableParameters extends AbstractParameters implements IT
             String[] split = parameterName.split(Pattern.quote("."));
             String subParamName = split[0];
             String subParam = parameterName.substring(subParamName.length() + 1);
-            ((ITunableParameters)getParameterValue(subParamName)).setParameterValue(subParam, value);
+            ((ITunableParameters) getParameterValue(subParamName)).setParameterValue(subParam, value);
         }
         if (parameterTypes.get(parameterName).isEnum() && value instanceof String) {
             Object[] values = parameterTypes.get(parameterName).getEnumConstants();
@@ -283,9 +297,8 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         }
         // Then, if value is TunableParameter itself, we 'lift' its attributes up to the top level
         // and remove any previous ones
-        if (value instanceof TunableParameters) {
-            TunableParameters subParams = (TunableParameters) value;
-            List<String> oldParamNames = parameterNames.stream().filter(n -> n.startsWith(parameterName + ".")).collect(toList());
+        if (value instanceof TunableParameters subParams) {
+            List<String> oldParamNames = parameterNames.stream().filter(n -> n.startsWith(parameterName + ".")).toList();
             // we now remove these
             oldParamNames.forEach(parameterNames::remove);
             oldParamNames.forEach(possibleValues::remove);
@@ -293,24 +306,15 @@ public abstract class TunableParameters extends AbstractParameters implements IT
             oldParamNames.forEach(currentValues::remove);
             for (String name : subParams.getParameterNames()) {
                 String liftedName = parameterName + "." + name;
-                addTunableParameter(liftedName, subParams.getDefaultParameterValue(name), subParams.getPossibleValues(name));
+                addTunableParameter(liftedName, subParams.getParameterTypes().get(name), subParams.getDefaultParameterValue(name), subParams.getPossibleValues(name));
                 setParameterValue(liftedName, subParams.getParameterValue(name));
             }
         }
 
         // this sets the value within ITunableParameters; but this may need to be transposed to the local field
-        _reset();
+        if (resetOn)
+            _reset();
     }
-
-    /**
-     * Method that reloads all the locally stored values from currentValues
-     * This is in case sub-classes decide to use the frankly more intuitive access via
-     * params.paramName
-     * instead of
-     * params.getParameterValue("paramName")
-     * (the latter is also more typo-prone if we hardcode strings everywhere)
-     */
-    abstract public void _reset();
 
     /**
      * Retrieve the values of one parameter.
@@ -375,6 +379,55 @@ public abstract class TunableParameters extends AbstractParameters implements IT
         return retValue.toJSONString();
     }
 
+
+    @Override
+    public ITunableParameters instanceFromJSON(JSONObject jsonObject) {
+        return JSONUtils.loadClassFromJSON(jsonObject);
+    }
+
+    public void setRawJSON(JSONObject json) {
+        rawJSON = json;
+    }
+
+    @Override
+    public JSONObject instanceToJSON(boolean excludeDefaults) {
+        // this is very similar to getJSONDescription(), but only
+        // considers the current Parameter settings
+        // we will recurse over nested ITunableParameters (but do not jump over intervening non-Tunable objects)
+        JSONObject retValue = new JSONObject();
+        retValue.put("class", this.getClass().getName());
+        for (String name : parameterNames) {
+            if (name.contains(".")) {
+                // we don't want to include these in the top level
+                continue;
+            }
+            Object value = getParameterValue(name);
+            if (value != null) {
+                // check for defaults
+                if (excludeDefaults && value.equals(getDefaultParameterValue(name))) {
+                    continue;
+                }
+                if (value instanceof ITunableParameters tp) {
+                    value = tp.instanceToJSON(excludeDefaults);
+                } else if (value instanceof Enum) {
+                    value = value.toString();
+                } else if (!(value instanceof Integer || value instanceof Long ||
+                        value instanceof Double || value instanceof String ||
+                        value instanceof Boolean)) {
+                    // in this case we need to extract from the original rawJSON
+                    if (rawJSON == null) {
+                        if (getDefaultParameterValue(name).equals(value))
+                            continue; // in this case we have the default, so no need to pull in
+                        throw new AssertionError("No rawJSON available to extract value for " + name);
+                    }
+                    value = rawJSON.get(name);
+                }
+                retValue.put(name, value);
+            }
+        }
+        return retValue;
+    }
+
     /**
      * Retrieve the values of all parameters.
      *
@@ -417,14 +470,28 @@ public abstract class TunableParameters extends AbstractParameters implements IT
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
-        if (!(o instanceof TunableParameters)) return false;
-        TunableParameters that = (TunableParameters) o;
+        if (!(o instanceof TunableParameters that)) return false;
         // getRandomSeed() == that.getRandomSeed() && removed, so that equals (and hashcode) covers parameters only
-        return  _equals(o)
+        return _equals(o)
                 && that.parameterNames.equals(parameterNames)
                 && that.possibleValues.equals(possibleValues)
                 && that.currentValues.equals(currentValues)
                 && that.defaultValues.equals(defaultValues);
+    }
+
+    public boolean allParametersAndValuesEqual(TunableParameters other) {
+        for (String name : parameterNames) {
+            if (name.equals("randomSeed")) continue; // we don't care about the random seed
+            if (currentValues.get(name) == null && other.currentValues.get(name) == null) continue;
+            if (currentValues.get(name) instanceof TunableParameters subParams) {
+                if (!subParams.allParametersAndValuesEqual((TunableParameters) other.currentValues.get(name))) {
+                    return false;
+                }
+            } else if (!currentValues.get(name).equals(other.currentValues.get(name))) {
+                return false;
+            }
+        }
+        return true;
     }
 
     @Override
